<resources>
    <string name="app_name">My Chat</string>
    <string name="contacts">HouseMates Fragment</string>
    <string name="groups">House Fragment</string>
    <string name="chats">Chats Fragment</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="loginButton">Sign in</string>
    <string name="forgetPassword">Forgot Password?</string>
    <string name="NeedNewAccount">Need new account?</string>
    <string name="phoneLoginText">Login using phone</string>
    <string name="phoneButtonLogin">Phone</string>
    <string name="createAccount">Create Account</string>
    <string name="AlreadyHaveAccount">Already Have account?</string>
    <string name="username">Username</string>
    <string name="userStatus"> Status</string>
    <string name="updateButton"> UPDATE</string>
    <string name="writeMessage"> write message...</string>
    <string name="enterPhoneNumber">Enter Phone Number...</string>
    <string name="enterVerificationCode">Enter Verification Code</string>
    <string name="sendVerCode">Send Code</string>
    <string name="verify">Verify</string>
    <string name="myHouses">My Houses</string>
    <string name="availableHouses">Available Houses</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_accept_or_decline_seeker">AcceptOrDeclineSeekerActivity</string>
    <string name="roomDescription">Not set</string>
    <string name="roomHouseId">Not Set</string>
    <string name="roomPicFileLocation">Not set</string>
    <string name="roomPrice">Not set</string>
    <string name="roomId">Not set</string>
    <string name="title_activity_add_room">AddRoomActivity</string>
    <string name="title_activity_view_house_mates">ViewHouseMatesActivity</string>
</resources>
