<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >
            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"

                android:src="@drawable/househunt1"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                />
            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_image"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs"
                android:importantForAutofill="no"
                android:padding="4dp"
                android:drawableStart="@drawable/email"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/login_email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/inputs"
                android:importantForAutofill="no"
                android:padding="4dp"
                android:drawableStart="@drawable/password"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                />
            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/forgetPassword"
                android:layout_below="@+id/login_password"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="textEnd"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:padding="4dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="17dp"
                android:text="@string/loginButton"
                android:textSize="24sp"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:background="@drawable/button_green"/>
            <TextView
                android:id="@+id/need_new_account_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/NeedNewAccount"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:id="@+id/phone_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/phoneLoginText"
                android:layout_below="@+id/need_new_account_link"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="23dp"
                android:textAlignment="center"
                android:textSize="17sp"
                />
            <Button
                android:id="@+id/phone_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_login_text"
                android:padding="4dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="17dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="17dp"
                android:text="@string/phoneButtonLogin"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:background="@drawable/button_green"
                android:drawableStart="@drawable/phone"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>